--- a/todo_frontend/pages/authors.html
+++ b/todo_frontend/pages/authors.html
@@ -68,48 +68,54 @@
         </div>
       </div>
   </nav>
-    <section>
-        <h1 style="text-align: center; padding-top: 4rem; padding-bottom: 2rem; font-family: 'Courier New', Courier, monospace;">Préstamos</h1>
-        <div class="table-responsive">
-        <table class="table">
-            <thead class="table-dark">
-              <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Nacionalidad</th>
-                <th scope="col">Fecha de Nacimiento</th>
-                <th scope="col">Biografía</th>
-                <th scope="col">Cantidad</th>
-              </tr>
-            </thead>
-            <tbody>
+  <section>
+    <h1 class="text-center mb-3" style="font-family: 'Courier New', Courier, monospace;">Tabla de Autores</h1>
+    <div class="table-responsive">
+    <table class="table">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Autor</th>
+            <th scope="col">Nacionalidad</th>
+            <th scope="col">Fecha de Nacimiento</th>
+            <th scope="col">Biografía</th>
+            <th scope="col">Libros en Stock</th>
+          </tr>
+        </thead>
+        <tbody id="booksTable">
+          <!-- Aquí se inyectarán los datos -->
+        </tbody>
+      </table>
+    </div>
+</section>
 
-            </tbody>
-          </table>
-        </div>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script>
-        // Fetch API
-        fetch('http://localhost:5000/authors')
-            .then(response => response.json())
-            .then(data => {
-                const authors = data;
-                const table = document.querySelector('tbody');
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        fetch('http://localhost:5000/api/authors')
+            .then(response => {
+                if (!response.ok) throw new Error("Error al obtener los datos");
+                return response.json();
+            })
+            .then(authors => {
+                const tableBody = document.getElementById('booksTable');
+                tableBody.innerHTML = ''; // Limpiar antes de agregar filas
+
                 authors.forEach(author => {
                     const row = document.createElement('tr');
                     row.innerHTML = `
                         <td>${author.id}</td>
                         <td>${author.name}</td>
                         <td>${author.nationality}</td>
-                        <td>${author.birth_date}</td>
+                        <td>${new Date(author.born_date).toLocaleDateString()}</td>
                         <td>${author.biography}</td>
                         <td>${author.books.length}</td>
                     `;
-                    table.appendChild(row);
+                    tableBody.appendChild(row);
                 });
             })
-            .catch(error => console.error('Error fetching authors:', error));
-    </script>
+            .catch(error => console.error("Error:", error));
+    });
+</script>
 </body>
 </html>
