--- a/todo_frontend/pages/books.html
+++ b/todo_frontend/pages/books.html
@@ -1,50 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Library Website">
     <meta name="keywords" content="HTML,CSS,JavaScript,NodeJS">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <!-- Title -->
     <title>La Biblioteca de Babel</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/icon.png">
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- CSS -->
     <link href="./assets/style.css" rel="stylesheet">
     <style>
-        /* Ajuste del margen lateral */
-        .table-responsive {
-            margin: 0 5%;
-        }
-        /* Botón de editar */
-        .btn-edit {
-            background-color: #007bff; /* Azul */
-            border: none;
-            color: white;
-        }
-        .btn-edit:hover {
-            background-color: #0056b3;
-        }
-        /* Botón de eliminar */
-        .btn-delete {
-            background-color: #dc3545; /* Rojo */
-            border: none;
-            color: white;
-        }
-        .btn-delete:hover {
-            background-color: #c82333;
-        }
+        .table-responsive { margin: 0 5%; }
+        .btn-edit { background-color: #007bff; border: none; color: white; }
+        .btn-edit:hover { background-color: #0056b3; }
+        .btn-delete { background-color: #dc3545; border: none; color: white; }
+        .btn-delete:hover { background-color: #c82333; }
     </style>
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-light">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar-toggler">
@@ -52,31 +33,24 @@
               <img src="images/icon.png" width="50" alt="Website icon">
           </a>
           <ul class="navbar-nav d-flex justify-content-center align-items-center">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="books.html">Libros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="loans.html">Préstamos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="authors.html">Autores</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link active" href="books.html">Libros</a></li>
+            <li class="nav-item"><a class="nav-link" href="loans.html">Préstamos</a></li>
+            <li class="nav-item"><a class="nav-link" href="authors.html">Autores</a></li>
           </ul>
         </div>
       </div>
-  </nav>
+    </nav>
+
     <section>
-        <h1 style="text-align: center; padding-top: 4rem; padding-bottom: 2rem; font-family: 'Courier New', Courier, monospace;">Préstamos</h1>
+        <h1 class="text-center mb-3" style="font-family: 'Courier New', Courier, monospace;">Tabla de Libros</h1>
         <div class="table-responsive">
         <table class="table">
             <thead class="table-dark">
               <tr>
-                <th scope="col">Id</th>
+                <th scope="col">ID</th>
                 <th scope="col">Autor</th>
-                <th scope="col">Autor Id</th>
+                <th scope="col">Autor ID</th>
                 <th scope="col">Disponibilidad</th>
                 <th scope="col">Cantidad</th>
                 <th scope="col">Título</th>
@@ -86,35 +60,44 @@
                 <th scope="col">Precio del Préstamo</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="booksTable">
+              <!-- Aquí se inyectarán los datos -->
             </tbody>
           </table>
         </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Fetch API
-        fetch('http://localhost:5000/books')
-            .then(response => response.json())
-            .then(data => {
-                const table = document.querySelector('tbody');
-                data.forEach(book => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                        <td>${book.id}</td>
-                        <td>${book.author}</td>
-                        <td>${book.author_id}</td>
-                        <td>${book.available}</td>
-                        <td>${book.quantity}</td>
-                        <td>${book.title}</td>
-                        <td>${book.publication_date}</td>
-                        <td>${book.genre}</td>
-                        <td>${book.language}</td>
-                        <td>${book.loan_price}</td>
-                    `;
-                    table.appendChild(row);
-                });
-            });
+        document.addEventListener("DOMContentLoaded", () => {
+            fetch('http://localhost:5000/api/books')
+                .then(response => {
+                    if (!response.ok) throw new Error("Error al obtener los datos");
+                    return response.json();
+                })
+                .then(books => {
+                    const tableBody = document.getElementById('booksTable');
+                    tableBody.innerHTML = ''; // Limpiar antes de agregar filas
+
+                    books.forEach(book => {
+                        const row = document.createElement('tr');
+                        row.innerHTML = `
+                            <td>${book.id}</td>
+                            <td>${book.author ? book.author.name : "Desconocido"}</td>
+                            <td>${book.author_id ?? "N/A"}</td>
+                            <td>${book.availability}</td>
+                            <td>${book.stock ?? "Sin datos"}</td>
+                            <td>${book.title}</td>
+                            <td>${book.publication_date ? new Date(book.publication_date).toLocaleDateString() : "Sin fecha"}</td>
+                            <td>${book.genre}</td>
+                            <td>${book.language}</td>
+                            <td>${book.loan_price}</td>
+                        `;
+                        tableBody.appendChild(row);
+                    });
+                })
+                .catch(error => console.error("Error:", error));
+        });
     </script>
 </body>
 </html>
