--- a/todo_frontend/pages/index.html
+++ b/todo_frontend/pages/index.html
@@ -15,6 +15,42 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
     <link href="./assets/style.css" rel="stylesheet">
+    <style>
+        /* Estilos personalizados */
+        .card {
+            transition: transform 0.2s;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        .card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .card-img-top {
+            height: 200px;
+            object-fit: cover;
+        }
+        .card-body {
+            padding: 1.5rem;
+        }
+        .card-title {
+            font-size: 1.25rem;
+            font-weight: bold;
+        }
+        .card-text {
+            font-size: 0.9rem;
+            color: #555;
+        }
+        .availability {
+            font-weight: bold;
+            color: #28a745; /* Verde para disponibilidad */
+        }
+        .no-availability {
+            font-weight: bold;
+            color: #dc3545; /* Rojo para no disponibilidad */
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
@@ -44,11 +80,13 @@
           </div>
         </div>
     </nav>
+
+    <!-- Sección de Bienvenida -->
     <section>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <h1 class=" display-1 justify-content-center text-center" id="title">Bienvenido a la Biblioteca de Babel</h1>
+                    <h1 class="display-1 justify-content-center text-center" id="title">Bienvenido a la Biblioteca de Babel</h1>
                     <p class="lead justify-content-center text-center">Aquí podrás encontrar una infinidad de libros, teóricamente...</p>
                 </div>
                 <div class="col-12 col-md-6">
@@ -57,49 +95,70 @@
             </div>
         </div>
     </section>
+
+    <!-- Sección de Libros -->
     <section>
-      <div class="container-fluid w-100" id="book-list">
         <h1 style="text-align: center; padding-top: 4rem; padding-bottom: 2rem; font-family: 'Courier New', Courier, monospace;">Libros</h1>
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-6 g-4 mb-5" id="books-container">
-              <!-- Las cartas de los libros se generarán aquí dinámicamente -->
-          </div>
-      </div>
+        <div class="container">
+            <div class="row" id="books-container">
+                <!-- Las tarjetas de los libros se insertarán aquí dinámicamente -->
+            </div>
+        </div>
     </section>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <!-- Script para cargar los libros -->
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-    const booksContainer = document.getElementById("books-container");
+        document.addEventListener('DOMContentLoaded', function() {
+            const booksContainer = document.getElementById('books-container');
 
-    fetch("http://backend:5000/api/books")
-        .then(response => response.json())
-        .then(data => {
-            booksContainer.innerHTML = "";
-            data.forEach(book => {
-                const bookCard = `
-                    <div class="col">
-                        <div class="card h-100">
-                            <a href="libro.html?title=${encodeURIComponent(book.title)}" class="text-decoration-none">
-                                <img src="images/library.png" class="card-img-top" alt="${book.title}">
-                                <div class="card-body">
-                                    <h5 class="card-title" style="color:black">${book.title}</h5>
-                                    <p class="card-text ${book.available ? 'text-success' : 'text-danger'}">
-                                        ${book.available ? 'Disponible' : 'En Préstamo'}
-                                    </p>
-                                </div>
-                            </a>
+            // Función para obtener los libros desde la API
+            async function fetchBooks() {
+                try {
+                    const response = await fetch('http://localhost:5000/api/books');
+                    const books = await response.json();
+                    displayBooks(books);
+                } catch (error) {
+                    console.error('Error fetching books:', error);
+                }
+            }
+
+            // Función para mostrar los libros en tarjetas
+            function displayBooks(books) {
+                booksContainer.innerHTML = ''; // Limpiar el contenedor antes de agregar nuevas tarjetas
+
+                books.forEach(book => {
+                    const card = document.createElement('div');
+                    card.className = 'col-md-4 mb-4';
+
+                    card.innerHTML = `
+                        <div class="card">
+                            <img src="images/icon.png" class="card-img-top" alt="${book.title}">
+                            <div class="card-body">
+                                <h5 class="card-title">${book.title}</h5>
+                                <p class="card-text"><strong>Autor:</strong> ${book.author}</p>
+                                <p class="card-text"><strong>Género:</strong> ${book.genre}</p>
+                                <p class="card-text"><strong>Idioma:</strong> ${book.language}</p>
+                                <p class="card-text"><strong>Fecha de Publicación:</strong> ${new Date(book.publication_date).toLocaleDateString()}</p>
+                                <p class="card-text"><strong>Disponibilidad:</strong> 
+                                    <span class="${book.stock > 0 ? 'availability' : 'no-availability'}">
+                                        ${book.stock > 0 ? 'Disponible' : 'No disponible'}
+                                    </span>
+                                </p>
+                                <p class="card-text"><strong>Precio del Préstamo:</strong> $${book.loan_price}</p>
+                            </div>
                         </div>
-                    </div>
-                `;
-                booksContainer.innerHTML += bookCard;
-            });
-        })
-        .catch(error => {
-            console.error("Error al cargar los libros:", error);
-            booksContainer.innerHTML = "<p>Error al cargar los libros. Inténtalo de nuevo más tarde.</p>";
+                    `;
+
+                    booksContainer.appendChild(card);
+                });
+            }
+
+            // Llamar a la función para obtener y mostrar los libros
+            fetchBooks();
         });
-});
     </script>
 </body>
 </html>
