--- a/todo_frontend/pages/loans.html
+++ b/todo_frontend/pages/loans.html
@@ -125,5 +125,41 @@
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        // Seleccionamos todos los botones eliminar
+        const deleteButtons = document.querySelectorAll('.btn-delete');
+        deleteButtons.forEach((btn) => {
+          btn.addEventListener('click', async () => {
+            const loans= btn.dataset.id;
+            try {
+              const response = await fetch("http://localhost:5000/api/loans/:id", {
+                method: 'DELETE'
+              });
+              if (response.ok) {
+                alert('Autor eliminado con éxito');
+                location.reload();
+              } else {
+                alert('Error eliminando autor');
+              }
+            } catch (error) {
+              console.error(error);
+              alert('Error en la petición');
+            }
+          });
+        });
+  
+        // Seleccionamos todos los botones editar
+        const editButtons = document.querySelectorAll('.btn-edit');
+        editButtons.forEach((btn) => {
+          btn.addEventListener('click', () => {
+            const loans= btn.dataset.id;
+            // Redirige a un formulario de edición,
+            // o haz un fetch GET para traer los datos y mostrarlos en un modal
+            window.location.href = "http://localhost:5000/api/loans/:id";
+          });
+        });
+      });
+    </script>
 </body>
 </html>
