--- a/todo_frontend/pages/index.html
+++ b/todo_frontend/pages/index.html
@@ -126,9 +126,9 @@
                 }
             }
 
-            // Función para mostrar los libros en tarjetas
+            // Para mostrar las tarjetas de los libros
             function displayBooks(books) {
-                booksContainer.innerHTML = ''; // Limpiar el contenedor antes de agregar nuevas tarjetas
+                booksContainer.innerHTML = ''; // Limpio el contenedor antes de agregar nuevas tarjetas
 
                 books.forEach(book => {
                     const card = document.createElement('div');
@@ -139,7 +139,7 @@
                             <img src="images/icon.png" class="card-img-top" alt="${book.title}">
                             <div class="card-body">
                                 <h5 class="card-title">${book.title}</h5>
-                                <p class="card-text"><strong>Autor:</strong> ${book.author}</p>
+                                <p class="card-text"><strong>Autor:</strong> ${book.author?.name ?? 'Desconocido'}</p>
                                 <p class="card-text"><strong>Género:</strong> ${book.genre}</p>
                                 <p class="card-text"><strong>Idioma:</strong> ${book.language}</p>
                                 <p class="card-text"><strong>Fecha de Publicación:</strong> ${book.publication_date}</p>
