--- a/todo_frontend/pages/authors.html
+++ b/todo_frontend/pages/authors.html
@@ -1,77 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Metadata -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Library Website">
-    <meta name="keywords" content="HTML,CSS,JavaScript,NodeJS">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <!-- Title -->
-    <title>La Biblioteca de Babel</title>
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="images/icon.png">
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- CSS -->
-    <link href="./assets/style.css" rel="stylesheet">
-    <style>
-        /* Ajuste del margen lateral */
-        .table-responsive {
-            margin: 0 5%;
-        }
-        /* Botón de editar */
-        .btn-edit {
-            background-color: #007bff; /* Azul */
-            border: none;
-            color: white;
-        }
-        .btn-edit:hover {
-            background-color: #0056b3;
-        }
-        /* Botón de eliminar */
-        .btn-delete {
-            background-color: #dc3545; /* Rojo */
-            border: none;
-            color: white;
-        }
-        .btn-delete:hover {
-            background-color: #c82333;
-        }
-    </style>
+  <!-- Metadata -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Library Website">
+  <meta name="keywords" content="HTML,CSS,JavaScript,NodeJS">
+  <title>La Biblioteca de Babel</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="images/icon.png">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- CSS -->
+  <link href="./assets/style.css" rel="stylesheet">
+  <style>
+    /* Ajuste del margen lateral */
+    .table-responsive {
+      margin: 0 5%;
+    }
+    /* Botón de editar */
+    .btn-edit {
+      background-color: #007bff; /* Azul */
+      border: none;
+      color: white;
+    }
+    .btn-edit:hover {
+      background-color: #0056b3;
+    }
+    /* Botón de eliminar */
+    .btn-delete {
+      background-color: #dc3545; /* Rojo */
+      border: none;
+      color: white;
+    }
+    .btn-delete:hover {
+      background-color: #c82333;
+    }
+  </style>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar-toggler">
-          <a class="navbar-brand" href="index.html">
-              <img src="images/icon.png" width="50" alt="Website icon">
-          </a>
-          <ul class="navbar-nav d-flex justify-content-center align-items-center">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="books.html">Libros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="loans.html">Préstamos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="authors.html">Autores</a>
-            </li>
-          </ul>
-        </div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-md navbar-light">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-toggler">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/icon.png" width="50" alt="Website icon">
+        </a>
+        <ul class="navbar-nav d-flex justify-content-center align-items-center">
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="books.html">Libros</a></li>
+          <li class="nav-item"><a class="nav-link" href="loans.html">Préstamos</a></li>
+          <li class="nav-item"><a class="nav-link active" href="authors.html">Autores</a></li>
+        </ul>
       </div>
+    </div>
   </nav>
+
   <section>
     <h1 class="text-center mb-3" style="font-family: 'Courier New', Courier, monospace;">Tabla de Autores</h1>
     <div class="table-responsive">
-    <table class="table">
+      <table class="table">
         <thead class="table-dark">
           <tr>
             <th scope="col">ID</th>
@@ -80,42 +71,84 @@
             <th scope="col">Fecha de Nacimiento</th>
             <th scope="col">Biografía</th>
             <th scope="col">Libros en Stock</th>
+            <th scope="col">Acciones</th>
           </tr>
         </thead>
-        <tbody id="booksTable">
+        <tbody id="authorsTable">
           <!-- Aquí se inyectarán los datos -->
         </tbody>
       </table>
     </div>
-</section>
+  </section>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <!-- Script para cargar autores y gestionar botones -->
+  <script>
     document.addEventListener("DOMContentLoaded", () => {
-        fetch('http://localhost:5000/api/authors')
-            .then(response => {
-                if (!response.ok) throw new Error("Error al obtener los datos");
-                return response.json();
-            })
-            .then(authors => {
-                const tableBody = document.getElementById('booksTable');
-                tableBody.innerHTML = ''; // Limpiar antes de agregar filas
+      // Cargar autores desde la API
+      fetch('http://localhost:5000/api/authors')
+        .then(response => {
+          if (!response.ok) throw new Error("Error al obtener los datos");
+          return response.json();
+        })
+        .then(authors => {
+          const tableBody = document.getElementById('authorsTable');
+          tableBody.innerHTML = ''; // Limpiar antes de agregar filas
 
-                authors.forEach(author => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                        <td>${author.id}</td>
-                        <td>${author.name}</td>
-                        <td>${author.nationality}</td>
-                        <td>${new Date(author.born_date).toLocaleDateString()}</td>
-                        <td>${author.biography}</td>
-                        <td>${author.books.length}</td>
-                    `;
-                    tableBody.appendChild(row);
-                });
+          authors.forEach(author => {
+
+            const row = document.createElement('tr');
+            row.innerHTML = `
+              <td>${author.id}</td>
+              <td>${author.name}</td>
+              <td>${author.nationality}</td>
+              <td>${author.born_date}</td>
+              <td>${author.biography}</td>
+              <td>${author.stock_books}</td>
+              <td>
+                <button class="btn btn-edit btn-sm me-1" data-id="${author.id}">Editar</button>
+                <button class="btn btn-delete btn-sm" data-id="${author.id}">Eliminar</button>
+              </td>
+            `;
+            tableBody.appendChild(row);
+          });
+        })
+        .catch(error => console.error("Error:", error));
+
+      // Delegación de eventos para los botones de editar y eliminar
+      document.getElementById('authorsTable').addEventListener('click', (event) => {
+        // Si se hizo click en un botón de editar
+        if (event.target.classList.contains('btn-edit')) {
+          const id = event.target.dataset.id;
+          // Ejemplo: Solicitar un nuevo nombre para el autor (puedes modificar esto según tu necesidad)
+          window.location.href = `form_authors.html?id=${id}`;
+        }
+
+        // Si se hizo click en un botón de eliminar
+        if (event.target.classList.contains('btn-delete')) {
+          const id = event.target.dataset.id;
+          if (confirm("¿Estás seguro de que deseas eliminar este registro?")) {
+            fetch(`http://localhost:5000/api/authors/${id}`, {
+              method: 'DELETE'
             })
-            .catch(error => console.error("Error:", error));
+            .then(response => {
+              if (!response.ok) throw new Error("Error al eliminar el registro");
+              return response.json();
+            })
+            .then(data => {
+              alert("Registro eliminado correctamente");
+              location.reload(); // Recarga la página para ver los cambios
+            })
+            .catch(error => {
+              console.error("Error:", error);
+              alert("Error al eliminar el registro, otras entidades dependen de este");
+            });
+          }
+        }
+      });
     });
-</script>
+  </script>
 </body>
 </html>
