--- a/todo_frontend/pages/form_loans.html
+++ b/todo_frontend/pages/form_loans.html
@@ -2,80 +2,89 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Préstamos</title>
+  <title>Editar Préstamo</title>
   <link rel="stylesheet" href="./assets/formulario.css" />
+  <!-- Bootstrap (opcional para estilos) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1>Gestión de Préstamos</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="authors.html">Autores</a></li>
-        <li><a href="books.html">Libros</a></li>
-        <li><a href="loans.html">Préstamos</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="loans-section">
-    <h2>Préstamos</h2>
-
-    <!-- Formulario para CREAR un préstamo -->
-    <form class="form-create" action="/loans/create" method="POST">
-      <h3>Registrar Préstamo</h3>
-
-      <label for="loanBookId">ID del Libro</label>
-      <input type="number" id="loanBookId" name="book_id" required />
-
-      <label for="loanPrice">Precio</label>
-      <input type="number" step="0.01" id="loanPrice" name="price" required />
-
-      <label for="loanReader">Lector</label>
-      <input type="text" id="loanReader" name="reader" required />
-
-      <label for="loanDate">Fecha de Préstamo</label>
-      <input type="date" id="loanDate" name="loan_date" required />
-
-      <label for="returnDate">Fecha de Devolución</label>
-      <input type="date" id="returnDate" name="return_date" required />
-
-      <button type="submit">Crear Préstamo</button>
+  <div class="container mt-4">
+    <h1>Editar Préstamo</h1>
+    <form id="loanEditForm">
+      <div class="mb-3">
+        <label for="editLoanBookId" class="form-label">ID del Libro</label>
+        <input type="number" class="form-control" id="editLoanBookId" name="book_id" required />
+      </div>
+      <div class="mb-3">
+        <label for="editLoanPrice" class="form-label">Precio</label>
+        <input type="number" step="0.01" class="form-control" id="editLoanPrice" name="price" required />
+      </div>
+      <div class="mb-3">
+        <label for="editLoanReader" class="form-label">Lector</label>
+        <input type="text" class="form-control" id="editLoanReader" name="reader" required />
+      </div>
+      <div class="mb-3">
+        <label for="editLoanDate" class="form-label">Fecha de Préstamo</label>
+        <input type="text" class="form-control" id="editLoanDate" name="loan_date" required />
+      </div>
+      <div class="mb-3">
+        <label for="editReturnDate" class="form-label">Fecha de Devolución</label>
+        <input type="text" class="form-control" id="editReturnDate" name="return_date" required />
+      </div>
+      <button type="submit" class="btn btn-primary">Guardar Cambios</button>
     </form>
+  </div>
 
-    <!-- Tabla para LISTAR los préstamos -->
-    <table>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>ID Libro</th>
-          <th>Precio</th>
-          <th>Lector</th>
-          <th>Fecha Préstamo</th>
-          <th>Fecha Devolución</th>
-          <th>Acciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Fila de ejemplo -->
-        <tr>
-          <td>1</td>
-          <td>1</td>
-          <td>2.50</td>
-          <td>Juan Pérez</td>
-          <td>2025-01-10</td>
-          <td>2025-01-20</td>
-          <td>
-            <a class="btn-edit" href="/loans/edit/1">Editar</a>
-            <a class="btn-delete" href="/loans/delete/1">Eliminar</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
+  <script>
+    // Obtener el id del préstamo desde la URL (por ejemplo, form_loans.html?id=123)
+    const urlParams = new URLSearchParams(window.location.search);
+    const loanId = urlParams.get('id');
 
-  <footer>
-    <p>CRUD Básico de Préstamos - Ejemplo</p>
-  </footer>
+    // Cargar los datos del préstamo para precargar el formulario
+    fetch(`http://localhost:5000/api/loans/${loanId}`)
+      .then(response => {
+        if (!response.ok) throw new Error("Error al obtener los datos del préstamo");
+        return response.json();
+      })
+      .then(loan => {
+        // Se espera que la API retorne un objeto con al menos: book_id, price, reader, loan_date, return_date
+        document.getElementById('editLoanBookId').value = loan.book_id;
+        document.getElementById('editLoanPrice').value = loan.price;
+        document.getElementById('editLoanReader').value = loan.reader;
+        document.getElementById('editLoanDate').value = loanDate;
+        document.getElementById('editReturnDate').value = returnDate;
+      })
+      .catch(error => console.error(error));
+
+    // Manejar el envío del formulario de edición usando fetch con método PATCH
+    document.getElementById('loanEditForm').addEventListener('submit', (e) => {
+      e.preventDefault();
+      const updatedLoan = {
+        book_id: parseInt(document.getElementById('editLoanBookId').value, 10),
+        price: parseFloat(document.getElementById('editLoanPrice').value),
+        reader: document.getElementById('editLoanReader').value,
+        loan_date: document.getElementById('editLoanDate').value,
+        return_date: document.getElementById('editReturnDate').value
+      };
+
+      fetch(`http://localhost:5000/api/loans/${loanId}`, {
+        method: 'PATCH',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(updatedLoan)
+      })
+      .then(response => {
+        if (!response.ok) throw new Error("Error al actualizar el préstamo");
+        return response.json();
+      })
+      .then(data => {
+        alert("Préstamo actualizado exitosamente");
+        window.location.href = 'loans.html'; // Redirige a la lista de préstamos
+      })
+      .catch(error => {
+        console.error(error);
+        alert("Error al actualizar el préstamo");
+      });
+    });
+  </script>
 </body>
 </html>
