Agrego boton create ya funcional, corrijo partes del back

--- a/todo_frontend/pages/book_details.html
+++ b/todo_frontend/pages/book_details.html
@@ -133,7 +133,7 @@
         </div>
         <div class="back-button">
             <a href="index.html" class="btn btn-primary">Volver a la lista de libros</a>
-            <button id="loan-button" class="btn btn-success">Solicitar préstamo del libro</button>
+            <a href="create_loans.html" class="btn btn-success">Solicitar préstamo del libro</a>
         </div>
     </section>
 
