--- a/todo_frontend/pages/books.html
+++ b/todo_frontend/pages/books.html
@@ -59,27 +59,34 @@
     </div>
   </nav>
 
+  <!-- Sección de la Tabla de Libros -->
   <section>
-    <h1 class="text-center mb-3" style="font-family: 'Courier New', Courier, monospace;">Tabla de Libros</h1>
-    <div class="table-responsive">
-      <table class="table">
-        <thead class="table-dark">
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Título</th>
-            <th scope="col">Autor</th>
-            <th scope="col">Género</th>
-            <th scope="col">Idioma</th>
-            <th scope="col">Fecha de Publicación</th>
-            <th scope="col">Disponibilidad</th>
-            <th scope="col">Precio del Préstamo</th>
-            <th scope="col">Acciones</th>
-          </tr>
-        </thead>
-        <tbody id="booksTable">
-          <!-- Aquí se inyectarán los datos -->
-        </tbody>
-      </table>
+    <div class="container">
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1 class="text-center" style="font-family: 'Courier New', Courier, monospace;">Tabla de Libros</h1>
+        <!-- Botón para crear un nuevo libro -->
+        <a href="create_books.html" class="btn btn-success">Nuevo Libro</a>
+      </div>
+      <div class="table-responsive">
+        <table class="table">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Título</th>
+              <th scope="col">Autor</th>
+              <th scope="col">Género</th>
+              <th scope="col">Idioma</th>
+              <th scope="col">Fecha de Publicación</th>
+              <th scope="col">Disponibilidad</th>
+              <th scope="col">Precio del Préstamo</th>
+              <th scope="col">Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="booksTable">
+            <!-- Aquí se inyectarán los datos -->
+          </tbody>
+        </table>
+      </div>
     </div>
   </section>
 
@@ -125,7 +132,7 @@
         // Si se hizo click en un botón de editar
         if (event.target.classList.contains('btn-edit')) {
           const id = event.target.dataset.id;
-          // Redirige a la ventana de edición para libros
+          // Redirige a la ventana de edición para libros (por ejemplo, form_books.html)
           window.location.href = `form_books.html?id=${id}`;
         }
 
