--- a/todo_frontend/pages/authors.html
+++ b/todo_frontend/pages/authors.html
@@ -60,7 +60,12 @@
   </nav>
 
   <section>
-    <h1 class="text-center mb-3" style="font-family: 'Courier New', Courier, monospace;">Tabla de Autores</h1>
+    <div class="container">
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1 class="text-center" style="font-family: 'Courier New', Courier, monospace;">Tabla de Autores</h1>
+        <!-- Botón para crear un nuevo autor -->
+        <a href="create_authors.html" class="btn btn-success">Nuevo Autor</a>
+      </div>
     <div class="table-responsive">
       <table class="table">
         <thead class="table-dark">
