--- a/todo_frontend/pages/loans.html
+++ b/todo_frontend/pages/loans.html
@@ -1,165 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Metadata -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Library Website">
-    <meta name="keywords" content="HTML,CSS,JavaScript,NodeJS">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <!-- Title -->
-    <title>La Biblioteca de Babel</title>
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="images/icon.png">
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- CSS -->
-    <link href="./assets/style.css" rel="stylesheet">
-    <style>
-        /* Ajuste del margen lateral */
-        .table-responsive {
-            margin: 0 5%;
-        }
-        /* Botón de editar */
-        .btn-edit {
-            background-color: #007bff; /* Azul */
-            border: none;
-            color: white;
-        }
-        .btn-edit:hover {
-            background-color: #0056b3;
-        }
-        /* Botón de eliminar */
-        .btn-delete {
-            background-color: #dc3545; /* Rojo */
-            border: none;
-            color: white;
-        }
-        .btn-delete:hover {
-            background-color: #c82333;
-        }
-    </style>
+  <!-- Metadata -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Library Website">
+  <meta name="keywords" content="HTML,CSS,JavaScript,NodeJS">
+  <title>La Biblioteca de Babel - Préstamos</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="images/icon.png">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- CSS personalizado -->
+  <link href="./assets/style.css" rel="stylesheet">
+  <style>
+    /* Ajuste del margen lateral */
+    .table-responsive {
+      margin: 0 5%;
+    }
+    /* Botón de editar */
+    .btn-edit {
+      background-color: #007bff; /* Azul */
+      border: none;
+      color: white;
+    }
+    .btn-edit:hover {
+      background-color: #0056b3;
+    }
+    /* Botón de eliminar */
+    .btn-delete {
+      background-color: #dc3545; /* Rojo */
+      border: none;
+      color: white;
+    }
+    .btn-delete:hover {
+      background-color: #c82333;
+    }
+  </style>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar-toggler">
-          <a class="navbar-brand" href="index.html">
-              <img src="images/icon.png" width="50" alt="Website icon">
-          </a>
-          <ul class="navbar-nav d-flex justify-content-center align-items-center">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="books.html">Libros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="loans.html">Préstamos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="authors.html">Autores</a>
-            </li>
-          </ul>
-        </div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-md navbar-light">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-toggler">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/icon.png" width="50" alt="Website icon">
+        </a>
+        <ul class="navbar-nav d-flex justify-content-center align-items-center">
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="books.html">Libros</a></li>
+          <li class="nav-item"><a class="nav-link active" href="loans.html">Préstamos</a></li>
+          <li class="nav-item"><a class="nav-link" href="authors.html">Autores</a></li>
+        </ul>
       </div>
+    </div>
   </nav>
-    <section>
-        <h1 style="text-align: center; padding-top: 4rem; padding-bottom: 2rem; font-family: 'Courier New', Courier, monospace;">Préstamos</h1>
-        <div class="table-responsive">
-        <table class="table">
-            <thead class="table-dark">
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Libro</th>
-                <th scope="col">Fecha de Préstamo</th>
-                <th scope="col">Fecha de Devolución</th>
-                <th scope="col">Precio</th>
-                <th scope="col">Acciones</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark Otto</td>
-                <td>El Aleph</td>
-                <td>01/01/2023</td>
-                <td>15/01/2023</td>
-                <td>$10</td>
-                <td>
-                    <button class="btn btn-edit btn-sm">Editar</button>
-                    <button class="btn btn-delete btn-sm">Eliminar</button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob Thornton</td>
-                <td>Ficciones</td>
-                <td>02/01/2023</td>
-                <td>16/01/2023</td>
-                <td>$12</td>
-                <td>
-                    <button class="btn btn-edit btn-sm">Editar</button>
-                    <button class="btn btn-delete btn-sm">Eliminar</button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Larry Bird</td>
-                <td>Don Quijote</td>
-                <td>03/01/2023</td>
-                <td>17/01/2023</td>
-                <td>$15</td>
-                <td>
-                    <button class="btn btn-edit btn-sm">Editar</button>
-                    <button class="btn btn-delete btn-sm">Eliminar</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        // Seleccionamos todos los botones eliminar
-        const deleteButtons = document.querySelectorAll('.btn-delete');
-        deleteButtons.forEach((btn) => {
-          btn.addEventListener('click', async () => {
-            const loans= btn.dataset.id;
-            try {
-              const response = await fetch("http://localhost:5000/api/loans/:id", {
-                method: 'DELETE'
+
+  <!-- Sección de la Tabla de Préstamos -->
+  <section>
+    <div class="container">
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1 class="text-center" style="font-family: 'Courier New', Courier, monospace;">Tabla de Prestamos</h1>
+        <!-- Botón para crear un nuevo prestamo -->
+        <a href="create_loans.html" class="btn btn-success">Nuevo Prestamo</a>
+    <div class="table-responsive">
+      <table class="table">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Libro</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Lector</th>
+            <th scope="col">Fecha de Préstamo</th>
+            <th scope="col">Fecha de Devolución</th>
+            <th scope="col">Acciones</th>
+          </tr>
+        </thead>
+        <tbody id="loansTable">
+          <!-- Aquí se inyectarán las filas -->
+        </tbody>
+      </table>
+    </div>
+  </section>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Script para cargar y gestionar la tabla de préstamos -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      // Se obtiene la lista de préstamos desde la API
+      fetch("http://localhost:5000/api/loans")
+        .then(response => {
+          if (!response.ok) throw new Error("Error al obtener los datos");
+          return response.json();
+        })
+        .then(loans => {
+          const tableBody = document.getElementById("loansTable");
+          tableBody.innerHTML = ""; // Limpiar contenido previo
+
+          // Recorrer el array de préstamos
+          loans.forEach(loan => {
+            const row = document.createElement("tr");
+            row.innerHTML = `
+              <td>${loan.id}</td>
+              <td>${loan.book?.title || 'Sin título'}</td>
+              <td>$${loan.price}</td>
+              <td>${loan.reader}</td>
+              <td>${loan.loan_date}</td>
+              <td>${loan.return_date}</td>
+              <td>
+                <button class="btn btn-edit btn-sm me-1" data-id="${loan.id}">Editar</button>
+                <button class="btn btn-delete btn-sm" data-id="${loan.id}">Eliminar</button>
+              </td>
+            `;
+            tableBody.appendChild(row);
+          });
+        })
+        .catch(error => console.error("Error:", error));
+
+      // Delegación de eventos para los botones
+      document.getElementById("loansTable").addEventListener("click", (event) => {
+        if (event.target.classList.contains("btn-edit")) {
+          const id = event.target.dataset.id;
+          // Redirige a la ventana de edición de préstamos
+          window.location.href = `form_loans.html?id=${id}`;
+        }
+        if (event.target.classList.contains("btn-delete")) {
+          const id = event.target.dataset.id;
+          if (confirm("¿Estás seguro de eliminar este préstamo?")) {
+            fetch(`http://localhost:5000/api/loans/${id}`, {
+              method: "DELETE"
+            })
+              .then(response => {
+                if (!response.ok) throw new Error("Error al eliminar el préstamo");
+                return response.json();
+              })
+              .then(data => {
+                alert("Préstamo eliminado correctamente");
+                location.reload(); // Recargar para ver los cambios
+              })
+              .catch(error => {
+                console.error("Error:", error);
+                alert("Error al eliminar el préstamo");
               });
-              if (response.ok) {
-                alert('Autor eliminado con éxito');
-                location.reload();
-              } else {
-                alert('Error eliminando autor');
-              }
-            } catch (error) {
-              console.error(error);
-              alert('Error en la petición');
-            }
-          });
-        });
-  
-        // Seleccionamos todos los botones editar
-        const editButtons = document.querySelectorAll('.btn-edit');
-        editButtons.forEach((btn) => {
-          btn.addEventListener('click', () => {
-            const loans= btn.dataset.id;
-            // Redirige a un formulario de edición,
-            // o haz un fetch GET para traer los datos y mostrarlos en un modal
-            window.location.href = `form_loans.html?id=${id}`;
-          });
-        });
+          }
+        }
       });
-    </script>
+    });
+  </script>
 </body>
 </html>
