Git commit final

--- a/todo_frontend/pages/authors.html
+++ b/todo_frontend/pages/authors.html
@@ -128,7 +128,7 @@
         if (event.target.classList.contains('btn-edit')) {
           const id = event.target.dataset.id;
           // Ejemplo: Solicitar un nuevo nombre para el autor (puedes modificar esto según tu necesidad)
-          window.location.href = `form_authors.html?id=${id}`;
+          window.location.href = `edit_authors.html?id=${id}`;
         }
 
         // Si se hizo click en un botón de eliminar
