--- a/todo_frontend/pages/books.html
+++ b/todo_frontend/pages/books.html
@@ -112,6 +112,7 @@
               <td>${book.genre}</td>
               <td>${book.language}</td>
               <td>${book.publication_date}</td>
+              <td>${book.availability}</td>
               <td>
                 <button class="btn btn-edit btn-sm me-1" data-id="${book.id}">Editar</button>
                 <button class="btn btn-delete btn-sm" data-id="${book.id}">Eliminar</button>
